# greentic-conformance

./: .gitignore  Cargo.toml  Makefile  README.md
.codex/: repo_overview.md
.github/workflows/: auto-tag.yml  ci.yml  conformance-hosted.yml  conformance.yml  oauth-conformance.yml  oauth-fapi-nightly.yml  provider-azure.yml  provider-google.yml  publish.yml  release.yml
ci/: README.md  local_check.sh
ci/docker/: compose.conformance.yml  rp.Dockerfile  rp_app.py
ci/env/: conformance.hosted.example.env
ci/plans/examples/: rp-code-pkce-basic.config.json
ci/scripts/: auto_run_conformance_plan.sh  auto_run_rp_plan.sh  cf_tunnel.sh  collect_reports.sh  run_conformance_hosted_with_tunnel.sh  run_conformance_plan.sh  wait_for.sh
ci/tools/: run_rp_modules.py
crates/oauth-mock/: Cargo.toml
crates/oauth-mock/src/: lib.rs
crates/oauth-mock/tests/: flows.rs
docs/: coverage.md  oidf_conformance.md
fixtures/deployer/: tenant_config_dev.yaml  tenant_config_invalid.yaml
fixtures/events/: event_flow_missing_provider.json  event_flow_valid.json  providers_invalid_missing_name.json  providers_valid.json  subscription_lifecycle_missing_delete.json  subscription_lifecycle_valid.json
fixtures/flows/: digital_worker_flow_missing_worker_id.ygtc  digital_worker_flow_valid.ygtc  events_flow_valid.ygtc  flow_with_invalid_routing.ygtc  mcp_flow_invalid.ygtc  messaging_flow_valid.ygtc  worker_flow_valid.ygtc
fixtures/mcp/: tools_declared.json
fixtures/oauth/: broker_request_invalid_scope.json  broker_request_valid.json  broker_response_error.json  broker_response_valid.json
fixtures/packs/invalid_pack_missing_component/: pack.manifest.yaml
fixtures/packs/invalid_pack_missing_secret/: pack.manifest.yaml
fixtures/packs/invalid_pack_missing_secret/flows/: echo.ygtc
fixtures/packs/invalid_pack_missing_signature/: pack.manifest.yaml
fixtures/packs/valid_pack_with_components_and_flows/: pack.manifest.yaml
fixtures/repo_store/: distributor_target_missing.json  distributor_target_valid.json  repo_metadata_missing_pack.json  repo_metadata_valid.json  store_subscriptions_invalid.json  store_subscriptions_valid.json
scripts/: ci.sh
src/: assertions.rs  component_suite.rs  deployer_suite.rs  env.rs  events_suite.rs  flow_suite.rs  lib.rs  oauth_broker_suite.rs  pack_suite.rs  repo_store_suite.rs  runner_suite.rs  shims.rs
src/fixtures/keys/: dev-ed25519-generate.rs
src/fixtures/oauth/mock-oidc/: README.md  docker-compose.yml
src/fixtures/oauth/mock-oidc/config/: issuer.json
src/fixtures/pack/: flow.yaml  pack.yaml  toolmap.json
src/fixtures/pack/templates/: echo.hbs
src/suites/: mod.rs  oauth.rs  pack_runner.rs  policy.rs
tests/: component_invoke.rs  core_schema_and_ids.rs  events_conformance.rs  flow_custom_validator.rs  flow_invalid.rs  flow_options.rs  flow_types_and_routing.rs  oauth.rs  oauth_and_secrets_conformance.rs  pack_and_component_conformance.rs  pack_ok.rs  pack_runner.rs  policy.rs  provider_azure.rs  provider_google.rs  repo_store_distributor_conformance.rs  runner_and_deployer_conformance.rs  runner_mock.rs  runner_policy.rs
tests/common/: mod.rs
tests/conformance/oauth/: env.rs
