[workspace]
members = ["crates/oauth-mock"]
resolver = "2"

[workspace.package]
version = "0.4.3"
edition = "2024"
rust-version = "1.89"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
axum = { version = "0.8", features = ["macros", "json"] }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
greentic-interfaces = { version = "0.4" }
greentic-oauth-sdk = { version = "0.4" }
greentic-pack = { version = "0.4" }
greentic-runner = { version = "0.4" }
greentic-secrets = { version = "0.4" }
greentic-types = { version = "0.4" }
handlebars = "6"
josekit = { version = "0.10" }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
oauth-mock = { path = "crates/oauth-mock" }
once_cell = "1"
openidconnect = { version = "4" }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2"
semver = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
clap = { version = "4", features = ["derive"] }

[package]
name = "greentic-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT"
publish = false
description = "Reusable conformance suites for Greentic (pack/runner/policy/oauth)"
readme = "README.md"

[lib]
name = "greentic_conformance"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_bw = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
walkdir = { workspace = true }
axum = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
semver = { workspace = true }

greentic-types = { workspace = true }
greentic-interfaces-host = { workspace = true, optional = true }
greentic-interfaces-guest = { workspace = true, optional = true }
greentic-runner = { workspace = true, optional = true }
greentic-pack = { workspace = true }
greentic-secrets = { workspace = true, optional = true }
greentic-oauth-sdk = { workspace = true, optional = true }


[features]
default = []
runner = ["dep:greentic-runner", "dep:greentic-pack"]
policy = ["dep:greentic-secrets", "dep:greentic-interfaces"]
oauth = ["dep:greentic-oauth-sdk", "dep:axum", "dep:reqwest"]

[dev-dependencies]
assert_cmd = { workspace = true }
ed25519-dalek = { workspace = true }
handlebars = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
oauth-mock = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }
jsonwebtoken = { workspace = true }
time = { workspace = true }
